# webgpu-demo

./: .gitmodules  CMakeLists.txt  LICENSE  noise-3d.raw  readme.md
Sponza/: Sponza-lights-blue.gltf  Sponza-lights.gltf  Sponza.gltf
cmake/: Findwgpu-native.cmake
include/webgpu-demo/: application.hpp  box.hpp  camera.hpp  engine.hpp  engine_utils.hpp  gltf_asset.hpp  gltf_iterator.hpp  gltf_loader.hpp  render_object.hpp  sdl_wgpu.h  synchronized_queue.hpp
source/: application.cpp  camera.cpp  engine.cpp  engine_utils.cpp  gltf_loader.cpp  main.cpp  render_object.cpp  sdl_wgpu.c
